Fixed plat