@@ -1,19 +1,22 @@
 package be.bnair.springdemo.controller;
 
+import java.util.ArrayList;
+import java.util.List;
 import java.util.stream.Collectors;
 
 import javax.validation.Valid;
 
+import be.bnair.springdemo.models.dto.IngredientDTO;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 
 import be.bnair.springdemo.models.dto.PlatDTO;
 import be.bnair.springdemo.models.form.IngredientForm;
-import be.bnair.springdemo.models.form.PlatDrawForm;
 import be.bnair.springdemo.models.form.PlatForm;
 import be.bnair.springdemo.service.IngredientService;
 import be.bnair.springdemo.service.PlatService;
@@ -58,33 +61,42 @@ public class PlatController {
 
     @GetMapping("plat/plat-edit/{id:[0-9]+}")
     public String editPlat(Model model, @PathVariable long id){
-        PlatDrawForm form = new PlatDrawForm();
+        PlatForm form = new PlatForm();
 
         PlatDTO plat = platService.getOne(id);
         form.setNom(plat.getNom());
         form.setIngredients(plat.getIngredients().stream()
-        .map(ing -> new IngredientForm(ing.getId(), ing.getName(), ing.getQuantity(), true))
-        .collect(Collectors.toList()));
+                .map(IngredientDTO::getId)
+                .toList());
 
+        model.addAttribute("ingredients", ingredientService.getAll().stream()
+                .map(i -> form.getIngredients()
+                        .contains(i.getId()) ?
+                        new IngredientForm(i.getId(), i.getName(), i.getQuantity(), true) :
+                        new IngredientForm(i.getId(), i.getName(), i.getQuantity(), false))
+                .toList());
         model.addAttribute("form",form);
         model.addAttribute("id",id);
         return "plat/plat-edit";
     }
-    
-    @PostMapping("plat/plat-edit/{id:[0-9]+}")
-    public String processUpdatePlat(PlatDrawForm form, BindingResult bindingResult, @PathVariable long id) {
-        if(bindingResult.hasErrors()) {
-            return "plat/plat-create";
-        } else {
-            PlatForm platForm = new PlatForm();
-            platForm.setNom(form.getNom());
-            platForm.setIngredients(
-                form.getIngredients().stream()
-                .map(ing -> ing.getId())
-            .collect(Collectors.toList()));
 
-            platService.update(platForm, id);
+    @PostMapping("plat/plat-edit/{id:[0-9]+}")
+    public String processUpdatePlat(@ModelAttribute("form") PlatForm form, @PathVariable long id) {
+        PlatDTO plat = platService.getOne(id);
+
+        plat.setNom(form.getNom());
+        plat.setIngredients(new ArrayList<>());
+
+        for (Long ingredientId : form.getIngredients()) {
+            IngredientDTO ingredient = ingredientService.getOne(ingredientId);
+            plat.addIngredient(ingredient);
         }
+
+        PlatForm platForm = new PlatForm();
+        platForm.setNom(plat.getNom());
+        platForm.setIngredients(plat.getIngredients().stream().map(IngredientDTO::getId).toList());
+        platService.update(platForm, id);
+
         return "redirect:/plat/plats";
     }
 }
